--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.5.0'
     compile 'org.apache.httpcomponents:httpclient:4.5.3'
     //compile 'com.google.code.gson:gson:2.8.0' 
+    testCompile "org.spockframework:spock-core:1.1-groovy-2.4"
 }
 
 /* Asciidoclet links:
