--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,12 @@
 apply plugin: 'groovy'
 
+/* `gradle install` can be used to install into local repo.
+ * `jar` section below should be commented out for that.
+ */
+apply plugin: 'maven'
+group = 'io.appery'
+version = '1.01'
+
 sourceCompatibility = '1.8'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
@@ -12,7 +19,7 @@ repositories {
 }
 
 jar {
-    baseName = 'apperyunit-1.01'
+    baseName = 'apperyunit'
 
     manifest { 
         attributes "Main-Class": "io.appery.apperyunit.au"
@@ -24,7 +31,7 @@ jar {
 }
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.5.1'
+    compile 'org.codehaus.groovy:groovy-all:2.5.4'
     compile 'org.apache.httpcomponents:httpclient:4.5.6'
     //compile 'com.google.code.gson:gson:2.8.0' 
     testCompile "org.spockframework:spock-core:1.1-groovy-2.4"
